<resources>
    <string name="app_name">BardcodeScanner</string>
    <string name="no_camera_permission" />
    <string name="ok" />
    <string name="low_storage_error" />
    <string name="permission_camera_rationale" />
    <string name="code">Código</string>
    <string name="name">Nombre</string>
    <string name="price">Precio</string>
    <string name="product">Producto</string>
    <string name="scanner">Escáner</string>
    <string name="options">Opciones</string>
    <string name="autofocus">Auto Focus</string>
    <string name="flash">Flash</string>
    <string name="my_price_holders">Mis Portaprecios</string>
    <string name="item_added">Se ha agregado este producto a su lista de portaprecios</string>
    <string name="title_activity_settings">Ajustes</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_default_server">192.168.0.1</string>
    <string name="pref_title_server">Dirección IP del servidor</string>
    <string name="settings">Ajustes</string>
    <string name="no_internet">Error de Internet. Revise su conexión Wi-Fi y asegúrese de haber escrito correctamente la dirección IP del servidor en la sección de Ajustes.</string>
    <string name="timeout">Tiempo de espera agotado. Revise su conexión Wi-FI y asegúrese de haber escrito correctamente la dirección IP del servidor en la sección de Ajustes.</string>
    <string name="error">ERROR</string>
    <string name="retry">Reintentar</string>
    <string name="go_to_settings">Ir a la sección de ajustes</string>
    <string name="not_found">No se encontró un artículo con el código de barras escaneado. Por favor intente de nuevo con otro.</string>
    <string name="unknown_error">Error desconocido</string>
    <string name="manual_input">Ingresar manualmente</string>
    <string name="barcode">Código de barras</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="see_list">Ver mi lista</string>
    <string name="add_to_list">Agregar a lista</string>
    <string name="update">Actualizar</string>
    <string name="success">Éxito</string>
    <string name="priceholders_sent">Sus portaprecios están listos. Puede pasar a imprimirlos.</string>
</resources>
